# apex

./: .gitignore  ENTERPRISE.md  MARKETING.md  NOTICE  README.md  SPEC.md  pyproject.toml  runway_dashboard.html
apex/: __init__.py  cli.py  config.py  docker_mgr.py  license.py
apex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apex/docker/: python.Dockerfile
apex/monitor/: collector.py  cpu.py  gpu.py
apex/scheduler/: queue.py  worker.py
apex/server/: app.py  auth.py  db.py
apex/server/routes/: images.py  jobs.py  metrics.py  sessions.py  users.py
apex/static/: index.html
apex/static/css/: app.css
apex/static/js/: app.js  jobs.js  logs.js  metrics.js  sessions.js
decisions/: 001-pricing.md  002-license.md
docker/: pytorch.Dockerfile
launch/: hacker-news.md  medium-post.md  product-hunt.md  twitter-thread.md
screenshots/: capture.py  record_hero.py
website/: README.md  index.html  vercel.json
